# chunking-super-hybrid

./: .gitignore  AGENTS.md  main.py  pipiline.md  pyproject.toml  requirements.txt
.kiro/specs/clean-page-text-output/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/steering/: project-context.md  workflow-overview.md
assets/: labels.json  labels_heading.json
docs/: FEATURE_INTAKE.md  FORMAT_GUIDE.md  GLOSSARY.md  HARNESS.md  HARNESS_BACKLOG.md  NAMING_CONVENTION.md  README.md  TEST_MATRIX.md  architecture.md  git-workflow.md
docs/decisions/: 0001-harness-first-development.md  0002-post-spec-product-lifecycle.md  0003-generic-spec-intake-harness.md  README.md
docs/product/: README.md
docs/stories/: README.md  backlog.md
docs/templates/: decision.md  spec-intake.md  story.md  validation-report.md
docs/templates/high-risk-story/: design.md  execplan.md  validation.md
scripts/: README.md
src/: __init__.py  check_env.py  cli.py  convert_text_raw_to_json.py  export_zip.py  extract_text_and_heading.py  merge_and_split_json.py  olmocr_extract.py  page_split.py  pipeline_logger.py  post_process_json.py  upload_qdrant.py
src/b1_extract/: extract_text_and_heading.py  olmocr_extract.py
src/b2_convert/: convert_text_raw_to_json.py
src/b3_chunk/: merge_and_split_json.py
src/b4_merge/: post_process_json.py
src/b5_export/: export_zip.py  page_split.py
test/: _check_output.py  _debug3.py  _debug4.py  _debug5.py  _debug_missing.py  _find_missing.py  _test_toc_all.py  search_collection.ipynb  test_clean_lesson_text.py  test_olmocr_extract.py  test_preservation.py  test_toc_parser.py
utils/: clip_search.py  delete_collection.ipynb  detect_noise.py  embedding_heading.py  extract_text_no_heading.py  process_qdrant.ipynb  upload_qdrant.py
